--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,10 @@ devtools::install_github("ValeriVoev/danstat")
 ```
 
 ## Overview
-The `danstat` package provides an R interface to Danmarks Statistik Statistikbank API to enable an easier access to the wealth of data in the data bank for research and the general community. The API has 4 endpoints which are mimicked by four main functions of the package:
+The `danstat` package provides an R interface to Danmarks Statistik Statistikbank API to enable an easier access to the wealth of data in the data bank for research and the general community. The documentation of the API can be found here: [Statistikbank API](https://www.dst.dk/en/Statistik/statistikbanken/api).
+
+## Usage
+The API has 4 endpoints which are mimicked by four main functions of the package:
 
 1. `get_subjects()` (SUBJECTS endpoint) retrieves information about subjects around which the data tables in the data bank are organized. The subjects are arranged hierarchically highest level like "Population and elections", "Living conditions", etc. `get_subjects()` retrieves the highest level of the hierarchy. See the function documentation for more details.
 1. `get_tables()` (TABLES endpoint) retrieves a list of tables associated with a given subject code. For example `get_tables(subjects = "02")` retrieves all tables related to the subject "Population and elections" with table id, description, variables in the table, etc. 
