Enabled Travis CI

--- a/README.Rmd
+++ b/README.Rmd
@@ -12,6 +12,10 @@ knitr::opts_chunk$set(
 options(tibble.print_min = 5, tibble.print_max = 5)
 ```
 
+<!-- badges: start -->
+[![Travis build status](https://travis-ci.org/ValeriVoev/danstat.svg?branch=master)](https://travis-ci.org/ValeriVoev/danstat)
+<!-- badges: end -->
+
 ## Installation
 From Github:
 ```{r, eval = FALSE}
