--- a/README.Rmd
+++ b/README.Rmd
@@ -14,9 +14,18 @@ options(tibble.print_min = 5, tibble.print_max = 5)
 
 <!-- badges: start -->
 [![Travis build status](https://travis-ci.org/ValeriVoev/danstat.svg?branch=master)](https://travis-ci.org/ValeriVoev/danstat)
+[![CRAN status](https://www.r-pkg.org/badges/version/danstat)](https://CRAN.R-project.org/package=danstat)
+![Since when](https://www.r-pkg.org/badges/ago/danstat)
+<!-- ![Downloads](https://cranlogs.r-pkg.org/badges/danstat) -->
+<!-- ![Downloads](https://cranlogs.r-pkg.org/badges/grand-total/danstat) -->
 <!-- badges: end -->
 
 ## Installation
+From CRAN:
+```{r, eval = FALSE}
+install.packages("danstat")
+```
+
 From Github:
 ```{r, eval = FALSE}
 # install.packages("devtools")
