--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ options(tibble.print_min = 5, tibble.print_max = 5)
 [![CRAN status](https://www.r-pkg.org/badges/version/danstat)](https://CRAN.R-project.org/package=danstat)
 ![Since when](https://www.r-pkg.org/badges/ago/danstat)
 <!-- ![Downloads](https://cranlogs.r-pkg.org/badges/danstat) -->
-<!-- ![Downloads](https://cranlogs.r-pkg.org/badges/grand-total/danstat) -->
+![Downloads](https://cranlogs.r-pkg.org/badges/grand-total/danstat)
 <!-- badges: end -->
 
 ## Installation
